Fix scrollbarshown abnormal when resizing.

--- a/src/app.less
+++ b/src/app.less
@@ -6,7 +6,7 @@ body {
 }
 
 #calendar {
-	max-width: 1200px;
+	max-width: 80%;
 	margin: 0 auto;
 }
 .fc-rs-day-header{
